--- a/applications/backend/environments/values-dev.yaml
+++ b/applications/backend/environments/values-dev.yaml
@@ -14,17 +14,24 @@ mysql:
 resources:
   requests:
     cpu: 100m
-    memory: 128Mi
-  limits:
-    cpu: 300m
     memory: 256Mi
+  limits:
+    cpu: 500m
+    memory: 512Mi
 
 probes:
   liveness:
     path: /health
     port: 8081
-    initialDelaySeconds: 5
+    initialDelaySeconds: 10
+    periodSeconds: 15
+    timeoutSeconds: 3
+    failureThreshold: 3
+
   readiness:
     path: /readiness
     port: 8081
-    initialDelaySeconds: 10
+    initialDelaySeconds: 20   # give MySQL time to initialize
+    periodSeconds: 10
+    timeoutSeconds: 3
+    failureThreshold: 5
