--- a/applications/frontend/environments/values-prod.yaml
+++ b/applications/frontend/environments/values-prod.yaml
@@ -13,3 +13,17 @@ hpa:
   maxReplicas: 5
   cpuUtilization: 60
   memoryUtilization: 75
+
+ingress:
+  enabled: true
+  annotations:
+    kubernetes.io/ingress.class: nginx
+  hosts:
+    - host: frontend-prod.example.com
+      paths:
+        - path: /
+          pathType: Prefix
+  tls:
+    - secretName: frontend-tls-prod
+      hosts:
+        - frontend-prod.example.com
