--- a/applications/backend/environments/values-dev.yaml
+++ b/applications/backend/environments/values-dev.yaml
@@ -39,4 +39,4 @@ probes:
 labels:
   app.kubernetes.io/name: backend
   app.kubernetes.io/part-of: vyking-app
-  environment: {{ .Values.environment }}
+  environment: dev
