--- a/applications/backend/environments/values-prod.yaml
+++ b/applications/backend/environments/values-prod.yaml
@@ -32,3 +32,8 @@ hpa:
   maxReplicas: 5
   cpuUtilization: 70
   memoryUtilization: 70
+
+labels:
+  app.kubernetes.io/name: backend
+  app.kubernetes.io/part-of: vyking-app
+  environment: prod
