--- a/infrastructure/mysql/templates/backup-cronjob.yaml
+++ b/infrastructure/mysql/templates/backup-cronjob.yaml
@@ -1,36 +1,33 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: {{ .Release.Name }}-backup
+  name: mysql-backup
 spec:
-  schedule: {{ .Values.backup.schedule | quote }}
+  schedule: {{ .Values.backup.schedule }}
   jobTemplate:
     spec:
       template:
         spec:
           containers:
             - name: mysql-backup
-              image: mysql:8.0
+              image: {{ .Values.backup.image }}
               command:
-                - /bin/sh
+                - sh
                 - -c
-                - |
-                  mysqldump \
-                    -h mysql.mysql-dev.svc.cluster.local \
-                    -P 3306 \
-                    -u $MYSQL_USER \
-                    -p$MYSQL_PASSWORD \
-                    $MYSQL_DATABASE > /backup/backup.sql
+                - >
+                  mysqldump -h mysql
+                  -u{{ .Values.mysql.username }}
+                  -p"$MYSQL_PASSWORD"
+                  {{ .Values.mysql.database }}
+                  > /backup/db-$(date +\%F-\%H-\%M).sql
               envFrom:
                 - secretRef:
-                    name: mysql-credentials-dev
-
+                    name: {{ .Values.mysql.secretName }}
               volumeMounts:
                 - name: backup-storage
-                  mountPath: /backups
+                  mountPath: /backup
           restartPolicy: OnFailure
           volumes:
             - name: backup-storage
               persistentVolumeClaim:
                 claimName: {{ .Values.backup.pvc }}
-
