--- a/infrastructure/mysql/values.yaml
+++ b/infrastructure/mysql/values.yaml
@@ -1,4 +1,4 @@
 mysql:
-  secretName: mysql-dev-secret   # or mysql-prod-secret
+  secretName: mysql-dev-secret
 persistence:
-  size: 1Gi
+  size: 8Gi
