--- a/applications/frontend/templates/ingress.yaml
+++ b/applications/frontend/templates/ingress.yaml
@@ -11,15 +11,20 @@ spec:
     - host: {{ .host }}
       http:
         paths:
-          {{- range .paths }}
-          - path: {{ .path }}
-            pathType: {{ .pathType }}
+          - path: /
+            pathType: Prefix
             backend:
               service:
                 name: {{ $.Release.Name }}-frontend
                 port:
                   number: {{ $.Values.service.port }}
-          {{- end }}
+          - path: /api
+            pathType: Prefix
+            backend:
+              service:
+                name: {{ $.Release.Name }}-backend
+                port:
+                  number: {{ $.Values.backend.port }}
     {{- end }}
   tls:
     {{- toYaml .Values.ingress.tls | nindent 4 }}
