--- a/applications/frontend/environments/values-prod.yaml
+++ b/applications/frontend/environments/values-prod.yaml
@@ -1,18 +1,14 @@
 replicaCount: 2
 
 image:
+  repository: vyking-frontend
   tag: prod
+  pullPolicy: IfNotPresent
 
-backend:
-  host: backend-backend.backend-prod.svc.cluster.local
-  port: 8081
-
-hpa:
-  enabled: true
-  minReplicas: 2
-  maxReplicas: 5
-  cpuUtilization: 60
-  memoryUtilization: 75
+service:
+  type: ClusterIP
+  port: 80
+  targetPort: 80
 
 ingress:
   enabled: true
@@ -23,7 +19,36 @@ ingress:
       paths:
         - path: /
           pathType: Prefix
+        - path: /api
+          pathType: Prefix
   tls:
     - secretName: frontend-tls-prod
       hosts:
         - frontend-prod.example.com
+
+resources:
+  requests:
+    cpu: 200m
+    memory: 256Mi
+  limits:
+    cpu: 500m
+    memory: 512Mi
+
+probes:
+  liveness:
+    path: /
+    port: 80
+    initialDelaySeconds: 5
+    periodSeconds: 15
+  readiness:
+    path: /
+    port: 80
+    initialDelaySeconds: 3
+    periodSeconds: 10
+
+hpa:
+  enabled: true
+  minReplicas: 2
+  maxReplicas: 5
+  cpuUtilization: 60
+  memoryUtilization: 75
