--- a/applications/frontend/app/Dockerfile
+++ b/applications/frontend/app/Dockerfile
@@ -1,5 +1,7 @@
 FROM nginx:1.25-alpine
 
 COPY index.html /usr/share/nginx/html/index.html
+COPY app.js /usr/share/nginx/html/app.js
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 CMD ["nginx", "-g", "daemon off;"]
