--- a/applications/frontend/templates/configmap.yaml
+++ b/applications/frontend/templates/configmap.yaml
@@ -1,20 +1,27 @@
-  server {
-    listen 80;
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ .Release.Name }}-nginx-config
+  namespace: frontend-{{ .Values.environment | default "dev" }}
+data:
+  nginx.conf: |
+    server {
+      listen 80;
 
-    # Serve frontend app
-    location / {
-    root   /usr/share/nginx/html;
-    index  index.html;
-    try_files $uri /index.html;
-    }
+      # Serve frontend app
+      location / {
+        root   /usr/share/nginx/html;
+        index  index.html;
+        try_files $uri /index.html;
+      }
 
-    # Proxy API calls to backend
-    location /api/ {
-    proxy_pass http://{{ .Values.backend.host }}:{{ .Values.backend.port }}/;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection keep-alive;
-    proxy_set_header Host $host;
-    proxy_cache_bypass $http_upgrade;
+      # Proxy API calls to backend
+      location /api/ {
+        proxy_pass http://{{ .Values.backend.host }}:{{ .Values.backend.port }}/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection keep-alive;
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+      }
     }
-  }
