--- a/applications/frontend/templates/configmap.yaml
+++ b/applications/frontend/templates/configmap.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ .Release.Name }}-nginx-config
   namespace: frontend-{{ .Values.environment | default "dev" }}
 data:
-  nginx.conf: |
+  default.conf: |
     server {
       listen 80;
 
