--- a/applications/frontend/environments/values-dev.yaml
+++ b/applications/frontend/environments/values-dev.yaml
@@ -52,3 +52,7 @@ hpa:
   maxReplicas: 3
   cpuUtilization: 70
   memoryUtilization: 80
+
+backend:
+  host: backend-backend.backend-dev.svc.cluster.local
+  port: 8081
