--- a/infrastructure/mysql/values.yaml
+++ b/infrastructure/mysql/values.yaml
@@ -2,3 +2,7 @@ mysql:
   secretName: mysql-dev-secret
 persistence:
   size: 8Gi
+image:
+  registry: docker.io
+  repository: bitnami/mysql
+  tag: 8.4.0-debian-12-r2
