--- a/infrastructure/mysql/environments/dev-values.yaml
+++ b/infrastructure/mysql/environments/dev-values.yaml
@@ -20,3 +20,8 @@ backup:
   pvc: mysql-backups
   envFromSecret:
     name: mysql-dev-secret
+
+image:
+  registry: docker.io
+  repository: bitnami/mysql
+  tag: 8.0.39-debian-12-r1
