--- a/infrastructure/mysql/values.yaml
+++ b/infrastructure/mysql/values.yaml
@@ -1,8 +1,16 @@
 mysql:
-  secretName: mysql-dev-secret
-persistence:
-  size: 8Gi
-image:
-  registry: docker.io
-  repository: bitnami/mysql
-  tag: 5.7.27
+  auth:
+    rootPassword: rootpass123
+    database: devdb
+    username: devuser
+    password: devpass123
+
+  primary:
+    persistence:
+      enabled: true
+      size: 8Gi
+
+  image:
+    registry: docker.io
+    repository: bitnami/mysql
+    tag: 8.0.39-debian-12-r1
