--- a/infrastructure/mysql/environments/dev-values.yaml
+++ b/infrastructure/mysql/environments/dev-values.yaml
@@ -18,8 +18,8 @@ resources:
     memory: 512Mi
 
 backup:
-  # schedule: "0 */48 * * *"   # every 2 days
-  schedule: "*/5 * * * *"      # every 5 minutes
+  schedule: "0 */48 * * *"   # every 2 days
+  # schedule: "*/5 * * * *"      # every 5 minutes
   image: mysql:8.0
   pvc: mysql-backups
   envFromSecret:
