--- a/infrastructure/mysql/environments/dev-values.yaml
+++ b/infrastructure/mysql/environments/dev-values.yaml
@@ -11,8 +11,9 @@ image:
   repository: vyking-mysql
   tag: dev
   pullPolicy: IfNotPresent
+
 init:
-  enabled: true
+  enabled: false
 
 resources:
   requests:
