--- a/infrastructure/mysql/environments/dev-values.yaml
+++ b/infrastructure/mysql/environments/dev-values.yaml
@@ -30,7 +30,7 @@ service:
 backup:
   schedule: "0 */48 * * *"   # every 2 days
   # schedule: "*/5 * * * *"      # every 5 minutes
-  image: mysql:8.0
+  image: vyking-mysql:dev
   pvc: mysql-backups
   envFromSecret:
     name: mysql-dev-secret
