--- a/applications/frontend/templates/ingress.yaml
+++ b/applications/frontend/templates/ingress.yaml
@@ -1,40 +1,30 @@
-{{- if .Values.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ .Release.Name }}-frontend
   annotations:
-    {{- toYaml .Values.ingress.annotations | nindent 4 }}
+    kubernetes.io/ingress.class: nginx
     argocd.argoproj.io/external-url: "https://frontend-{{ .Values.environment }}.local:8443/"
 spec:
   rules:
-    {{- range .Values.ingress.hosts }}
-    - host: {{ .host }}
+    - host: frontend-dev.local
       http:
         paths:
-          {{- if .paths }}
-          {{- range .paths }}
-          - path: {{ .path }}
-            pathType: {{ .pathType | default "Prefix" }}
-            backend:
-              service:
-                name: {{ $.Release.Name }}-frontend
-                port:
-                  number: {{ $.Values.service.port }}
-          {{- end }}
-          {{- else }}
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: {{ $.Release.Name }}-frontend
+                name: {{ .Release.Name }}-frontend
                 port:
-                  number: {{ $.Values.service.port }}
-        {{- end }}
-
-    {{- end }}
-  {{- if .Values.ingress.tls }}
+                  number: {{ .Values.service.port }}
+          - path: /api
+            pathType: Prefix
+            backend:
+              service:
+                name: backend-backend
+                port:
+                  number: 8081
   tls:
-    {{- toYaml .Values.ingress.tls | nindent 4 }}
-  {{- end }}
-  {{- end }}
+    - secretName: frontend-tls-dev
+      hosts:
+        - frontend-dev.local
