--- a/applications/frontend/Chart.yaml
+++ b/applications/frontend/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: frontend
-description: A Helm chart for the Vyking backend
+name: mysql
+description: Helm chart for deploying MySQL with backups
 type: application
 version: 0.1.0
-appVersion: "1.0"
+appVersion: "8.0"
