--- a/infrastructure/mysql/templates/backup-cronjob.yaml
+++ b/infrastructure/mysql/templates/backup-cronjob.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: {{ .Release.Name }}-backup
 spec:
-  schedule: "*/5 * * * *" # every 5 minutes (adjust per env)
+  schedule: "*/5 * * * *"
   jobTemplate:
     spec:
       template:
@@ -15,9 +15,9 @@ spec:
                 - sh
                 - -c
                 - >
-                  mysqldump -h mysql.mysql-$(ENVIRONMENT).svc.cluster.local
-                  -u${MYSQL_USER}
-                  -p${MYSQL_PASSWORD}
+                  mysqldump -h mysql.mysql-${ENVIRONMENT}.svc.cluster.local
+                  -uroot
+                  -p${MYSQL_ROOT_PASSWORD}
                   ${MYSQL_DATABASE}
                   > /backup/db-$(date +\%F-\%H-\%M).sql
               env:
@@ -25,21 +25,11 @@ spec:
                   valueFrom:
                     fieldRef:
                       fieldPath: metadata.namespace
-                - name: MYSQL_USER
-                  valueFrom:
-                    secretKeyRef:
-                      name: { { .Values.auth.existingSecret } }
-                      key: username
-                - name: MYSQL_USER
+                - name: MYSQL_ROOT_PASSWORD
                   valueFrom:
                     secretKeyRef:
                       name: {{ .Values.auth.existingSecret }}
-                      key: username
-                - name: MYSQL_PASSWORD
-                  valueFrom:
-                    secretKeyRef:
-                      name: {{ .Values.auth.existingSecret }}
-                      key: password
+                      key: rootPassword
                 - name: MYSQL_DATABASE
                   valueFrom:
                     secretKeyRef:
