stable fe and be

--- a/infrastructure/mysql/templates/backup-cronjob.yaml
+++ b/infrastructure/mysql/templates/backup-cronjob.yaml
@@ -33,7 +33,7 @@ spec:
                   valueFrom:
                     secretKeyRef:
                       name: {{ .Values.auth.existingSecret }}
-                      key: userPassword
+                      key: password
                 - name: MYSQL_DATABASE
                   valueFrom:
                     secretKeyRef:
