--- a/infrastructure/mysql/environments/dev-values.yaml
+++ b/infrastructure/mysql/environments/dev-values.yaml
@@ -11,7 +11,7 @@ auth:
   secretKeys:
     rootPasswordKey: rootPassword
     usernameKey: username
-    passwordKey: password
+    passwordKey: userPassword
     databaseKey: database
 
 primary:
